# My_CPU

./: .gitignore  CMakeLists.txt  DisAsm.cpp  Makefile  Parser.h  README.md  asm.cpp  build.sh  commands.h  cpu.cpp  cpuStruct.cpp  cpuStruct.h  exec.sh  iostd.s  linker.h  stdIN  stdOUT  stdout.s  translator_x86_64.cpp  translator_x86_64.h
LLVM/: Core.cpp  Core.hpp  Instruction.cpp  Instruction.hpp  LLVM_IR.cpp  LLVM_IR.hpp  Makefile  Tracer.cpp  Tracer.hpp  exec.cpp  exec.hpp  generate.cpp  generate.hpp  types.hpp
My_Headers/: elf_maker.h  protected_stack.c  protected_stack.h  txt_files.c  txt_files.h
Tests/: Factorial.txt  QEquation.txt  branch.txt  call.txt  jmp_fw.txt  numbers.txt  ping.txt  pushpop.txt
